update tests according to new task history logic